src/objects/ContactRequest.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_date__c</fullName>
        <label>Last Status Change date</label>
        <type>DateTime</type>
    </fields>
     <fields>
        <fullName>Time_Assignment_Pending__c</fullName>
        <formula>if(   ISNULL( Assigned_Date__c ),
TEXT(
 FLOOR( NOW()  - CreatedDate)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD(( NOW() - CreatedDate)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD(( NOW()  - CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot;, &quot;Assigned&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Assignment Pending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Since_Assigned__c</fullName>
        <formula>if(!ISNULL(Assigned_Date__c) &amp;&amp; IsNull(Closed_Date__c)  ,
TEXT(
 FLOOR( NOW() - Assigned_Date__c  )
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD(( NOW() - Assigned_Date__c )*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD(( NOW() - Assigned_Date__c )*1440,60),0)
) &amp;&quot; Minutes &quot;,&quot;Not Assigned or Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_since_last_Status_Change__c</fullName>
        <formula>TEXT(
 FLOOR(NOW() -  Last_Status_Change_date__c )
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((NOW() -  Last_Status_Change_date__c)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((NOW() -  Last_Status_Change_date__c)*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Since Last Status Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_time_Unassigned__c</fullName>
        <formula>if(  !ISNULL( Assigned_Date__c ) ,
TEXT(
 FLOOR(Assigned_Date__c- CreatedDate)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((Assigned_Date__c- CreatedDate)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((Assigned_Date__c- CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot; , &quot;Not Assigned&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Unassigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_time_to_close_case_Once_assigned__c</fullName>
        <formula>if( !ISNULL(Closed_Date__c ) ,
TEXT(
 FLOOR(Closed_Date__c - Assigned_Date__c )
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((Closed_Date__c - Assigned_Date__c )*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((Closed_Date__c - Assigned_Date__c )*1440,60),0)
) &amp;&quot; Minutes &quot; , &quot;Assignment Not Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time To Close Since Assigned</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ContactRequests</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contact Requests</label>
        <sharedTo>
            <group>CP_Master_Queue_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_1_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#1</label>
        <queue>CP_Contact_US_1</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group1</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_2_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#2</label>
        <queue>CP_Contact_US_2</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_3_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#3</label>
        <queue>CP_Contact_US_3</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group3</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_4_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#4</label>
        <queue>CP_Contact_US_4</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group4</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_5_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#5</label>
        <queue>CP_Contact_US_5</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group5</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_6_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#6</label>
        <queue>CP_Contact_US_6</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group6</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Contact_US_8_ContactRequest</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Queue#7</label>
        <queue>CP_Contact_US_8</queue>
        <sharedTo>
            <group>CP_Contact_Us_Group8</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Contact_Requests</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>Assigned_User__c</columns>
        <columns>Country_1__c</columns>
        <columns>Status</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Abandoned,Closed</value>
        </filters>
        <label>All Closed Contact Requests</label>
        <queue>CP_Contact_Us_Closed</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_ContactRequests</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>RequestReason</columns>
        <columns>RequestDescription</columns>
        <columns>Country_1__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Abandoned,Closed</value>
        </filters>
        <label>My Contact Requests</label>
    </listViews>
    <recordTypes>
        <fullName>Contact_Us</fullName>
        <active>true</active>
        <description>Record Type for Contact Requests created from Contact Us form on public website</description>
        <label>Contact Us</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>